# FastApi2

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_06_03_1808-4ae898a941ff_create_products_table.py
src/: __init__.py  config.py  database.py  main.py
src/auth/: demo_jwt_auth.py  router.py  token_helper.py  utils.py
src/products/: dependencies.py  models.py  router.py  schemas.py  service.py
src/users/: mixins.py  models.py  router.py  schemas.py  service.py
