[tool.poetry]
name = "fastapi-suren"
version = "0.0.0"
description = ""
authors = ["ilyamak04 <makilya04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.1"}

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
